--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>Empie Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -40,8 +40,8 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://www.linkedin.com/in/brandon-empie/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="mailto: brandon.m.empie@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -77,21 +77,21 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Below is some embedded programs I have written. They capture a few
-							elements of microprocessor programming I have learned in college. Additionally, I have included my
+							<p>Below is some embedded programs I have written. They capture a few of the
+							elements of microprocessor programming I learned in college. Additionally, I have included my
 							senior project where I collaborated with an electrical engineering student. We won
 								the best project award between our two majors for the graduating class of 2022.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/PIC.jpg" alt="" /></a>
+										<a href="https://github.com/empieb/IDL-4" class="image fit"><img src="images/PIC.jpg" alt="" /></a>
 										<header>
 											<h3>PIC: USART,LCD,I2C,Temp Sensor, and Piezioelectric Speaker</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/IDL3Flowchart.PNG" alt="" /></a>
+										<a href="https://github.com/empieb/IDL-3" class="image fit"><img src="images/PICTemp.jpg" alt="" /></a>
 										<header>
 											<h3>PIC: EEPROM in C</h3>
 										</header>
@@ -99,13 +99,13 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/SPDBFinished.jpg" alt="" /></a>
+										<a href="https://github.com/empieb/SeniorProject" class="image fit"><img src="images/SPDBFinished.jpg" alt="" /></a>
 										<header>
 											<h3>Senior Project in python</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/IDL1.PNG" alt="" /></a>
+										<a href="https://github.com/empieb/IDL-1" class="image fit"><img src="images/IDL1.PNG" alt="" /></a>
 										<header>
 											<h3>PIC: A/D converter in C</h3>
 										</header>
@@ -113,17 +113,18 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/Lab7.PNG" alt="" /></a>
+										<a href="https://github.com/empieb/Lab7" class="image fit"><img src="images/Lab7.PNG" alt="" /></a>
 										<header>
 											<h3>Motorola HCS12: PWM & Proportion Control in Assembly</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/Lab9.PNG" alt="" /></a>
+										<a href="https://github.com/empieb/Lab9" class="image fit"><img src="images/HCS12.PNG" alt="" /></a>
 										<header>
 											<h3>Motorola HCS12: PWM & Proportion Control in C</h3>
 										</header>
 									</article>
+
 								</div>
 							</div>
 
