--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
 							<p>Originally from Howard City, Michigan. I served in the U.S. Air Force from 2012-2018
 								honorably. During that time, I completed my associates degree in Criminal Justice and worked with alarm
 								systems as an Air Force-1 Security Controller where I realized my passion for technology.
+								Currently majoring in Computer Networks & Systems, minoring in Information Security & Intel. at Ferris State University
+								expected graduation is May, 2022
 							    My wife, Sarah, and I will have been married 3 years this coming July, and had a beautiful baby girl this past October.
 							    </p>
 
