--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
 							<p>Originally from Howard City, Michigan. I served in the U.S. Air Force from 2012-2018
 								honorably. During that time, I completed my associates degree in Criminal Justice and worked with alarm
 								systems as an Air Force-1 Security Controller where I realized my passion for technology.
-								Currently majoring in Computer Networks & Systems, minoring in Information Security & Intel. at Ferris State University
-								expected graduation is May, 2022
+								I recently (May, 2022) graduated from Ferris State University with my bachelors degree in Computer Networks & Systems, with a minor in Information Security & Intel.
 							    My wife, Sarah, and I will have been married 3 years this coming July, and had a beautiful baby girl this past October.
 							    </p>
 
